--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="utf-8">
 
+          <script src='https://api.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v0.25.1/mapbox-gl.css' rel='stylesheet' />
+
+
+        
 </head>
 <body>
     <div id="app"></div>
+    <script src="main.css"></script>
     <script src="main.js"></script>
 </body>
 </html>
