--- a/www/index.html
+++ b/www/index.html
@@ -12,5 +12,7 @@
 <body>
     <div id="app"></div>
     <script src="main.js"></script>
+    <link href='main.css' rel='stylesheet' />
+
 </body>
 </html>
